--- a/koa2-demo/views/index.ejs
+++ b/koa2-demo/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
     dddd2222
     <%= msg %>
-    <script src="/js/index.jsd"></script>
+    <img src="/images/01.jpg" alt="">
+    <script src="/js/index.js"></script>
 </body>
 </html>
