add vertual path

--- a/koa2-demo/views/index.ejs
+++ b/koa2-demo/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     dddd2222
     <%= msg %>
-    <img src="/images/01.jpg" alt="">
-    <script src="/js/index.js"></script>
+    <img src="/files/images/01.jpg" alt="">
+    <script src="/files/js/index.js"></script>
 </body>
 </html>
