--- a/koa2-demo/views/index.ejs
+++ b/koa2-demo/views/index.ejs
@@ -10,6 +10,14 @@
     dddd2222
     <%= msg %>
     <img src="/files/images/01.jpg" alt="">
+    <script src="/files/libs/asyncjs.js"></script>
+    <script >
+    AsyncJs({
+        js: "/files/libs/dialog.js"
+    }).then(function(){
+        console.log("sdgdgd")
+    })
+    </script>
     <script src="/files/js/index.js"></script>
 </body>
 </html>
